<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ty_sensors_mount</name>
  <version>0.0.0</version>
  <description>The ty_sensor_mount package</description>
  <maintainer email="sachinkum123567@gmail.com">Sachin Kumar</maintainer>
  <license>MIT</license>
  
  <url type="website">TechnoYantra.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
